docs/0.7/_sources/api/gammapy.maps.MapCoord.rst.txt
MapCoord
========

.. currentmodule:: gammapy.maps

.. autoclass:: MapCoord
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapCoord.coordsys
      ~MapCoord.lat
      ~MapCoord.lon
      ~MapCoord.match_by_name
      ~MapCoord.ndim
      ~MapCoord.shape
      ~MapCoord.size
      ~MapCoord.skycoord

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapCoord.apply_mask
      ~MapCoord.create
      ~MapCoord.to_coordsys

   .. rubric:: Attributes Documentation

   .. autoattribute:: coordsys
   .. autoattribute:: lat
   .. autoattribute:: lon
   .. autoattribute:: match_by_name
   .. autoattribute:: ndim
   .. autoattribute:: shape
   .. autoattribute:: size
   .. autoattribute:: skycoord

   .. rubric:: Methods Documentation

   .. automethod:: apply_mask
   .. automethod:: create
   .. automethod:: to_coordsys
