docs/0.10/_sources/api/gammapy.maps.MapCoord.rst.txt
MapCoord
========

.. currentmodule:: gammapy.maps

.. autoclass:: MapCoord
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapCoord.coordsys
      ~MapCoord.lat
      ~MapCoord.lon
      ~MapCoord.match_by_name
      ~MapCoord.ndim
      ~MapCoord.phi
      ~MapCoord.shape
      ~MapCoord.size
      ~MapCoord.skycoord
      ~MapCoord.theta

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapCoord.apply_mask
      ~MapCoord.copy
      ~MapCoord.create
      ~MapCoord.match_axes_units
      ~MapCoord.to_coordsys

   .. rubric:: Attributes Documentation

   .. autoattribute:: coordsys
   .. autoattribute:: lat
   .. autoattribute:: lon
   .. autoattribute:: match_by_name
   .. autoattribute:: ndim
   .. autoattribute:: phi
   .. autoattribute:: shape
   .. autoattribute:: size
   .. autoattribute:: skycoord
   .. autoattribute:: theta

   .. rubric:: Methods Documentation

   .. automethod:: apply_mask
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: match_axes_units
   .. automethod:: to_coordsys
